--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-//package-log json file
-.package-lock.json
+package-lock.json
+yarn-lock.json
+yarn.lock
